# s3-integrator

./: .coveragerc  .editorconfig  .gitignore  .jujuignore  .pre-commit-config.yaml  CONTRIBUTING.md  INTEGRATING.md  LICENSE  README.md  SECURITY.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  spread.yaml  tox.ini
.github/: renovate.json5
.github/workflows/: ci.yaml  integration_test.yaml  lib-check.yaml  release.yaml  sync_issue_to_jira.yaml  tests.yaml
lib/charms/data_platform_libs/v0/: s3.py
lib/charms/s3/v0/: s3.py
lib/charms/s3_integrator/v0/: s3.py
src/: charm.py  constants.py
tests/: ca_chain.pem  conftest.py  test_charm.py  test_consumer.py  test_integration.py
tests/integration/: helpers.py  test_s3_charm.py
tests/integration/application-charm/: actions.yaml  charmcraft.yaml  metadata.yaml  pyproject.toml
tests/integration/application-charm/src/: charm.py
tests/spread/test_s3_charm.py/: task.yaml
tests/unit/: test_charm.py
