[metadata]
name = s3-integrator
description = An s3 integrator charm for juju
url = https://github.com/canonical/s3_integrator
author = Dan Ryan
author_email = dan.ryan@canonical.com
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1
license = Apache-2.0
keywords = juju s3 cloud integrator
project_urls =
    Source Code = https://github.com/canonical/s3_integrator
    Change Log = https://github.com/canonical/s3_integrator/CHANGES.md
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options.extras_require]
integration =
    pytest-operator
tests =
    pytest
    coverage
    tox
lint =
    black
    flake8
    flake8-bugbear
    isort
    mypy
    lxml
    readme-renderer[md]
dev =
    twine
    pre-commit
    rope


[options]
zip_safe = true
python_requires = >3.6
setup_requires = setuptools>=44.0.0
include_package_data = true
packages = find:
install_requires =
    cryptography
    ops@ git+https://github.com/canonical/operator.git#egg=ops
    # ops >= 1.2.0
    jinja2

[bdist_wheel]
universal = 1

[isort]
atomic = true
not_skip = __init__.py
line_length = 88
indent = '    '
multi_line_output = 3
known_third_party = _pytest,charm,charms,ops,pytest
known_first_party =
    s3_integrator
    tests
combine_as_imports=True
include_trailing_comma = True
force_grid_wrap=0

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
ignore =
    # The default ignore list:
    D203,F401,E123,E203,W503,E501,E402
    #E121,E123,E126,E226,E24,E704,
    # Our additions:
    # E123: closing bracket does not match indentation of opening bracket's line
    # E203: whitespace before ':'
    # E129: visually indented line with same indent as next logical line
    # E222: multiple spaces after operator
    # E231: missing whitespace after ','
    # D203: 1 blank line required before class docstring
    # E402: module level import not at top of file
    # E501: line too long (using B950 from flake8-bugbear)
    # F401: Module imported but unused
    # W503: line break before binary operator (not a pep8 issue, should be ignored)
exclude =
    venv
    .tox,
    .git,
    __pycache__,
    build,
    dist,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    setup.py,
max-complexity=13

[mypy]
ignore_missing_imports=true
follow_imports=skip
html_report=mypyhtml
python_version=3.8
pretty=true
sqlite_cache=true
warn_unreachable=true
warn_redundant_casts=true
warn_return_any=true
show_error_context=true
